--- a/scss/_bootstrap-extended/_variables-dark.scss
+++ b/scss/_bootstrap-extended/_variables-dark.scss
@@ -16,7 +16,7 @@
 $white: #fff !default;
 $black: #000 !default;
 
-$base: #7c7db6 !default; // (C)
+$base: #cf8946 !default; // (C)
 $gray-25: rgba($white, 0.015) !default; // (C)
 $gray-50: rgba($white, 0.03) !default; // (C)
 $gray-100: rgba($white, 0.8) !default;
